--- a/.github/workflows/quark_signin.yml
+++ b/.github/workflows/quark_signin.yml
@@ -3,7 +3,6 @@ name: Quark Sign-in
 on:
   schedule:
     - cron: '0 1 * * *'  # 每天 UTC 时间 1:00 执行，即北京时间 9:00
-
   workflow_dispatch:  # 手动触发
 
 jobs:
@@ -26,3 +25,21 @@ jobs:
           COOKIE_QUARK: ${{ secrets.COOKIE_QUARK }}
         run: |
           python checkIn_Quark.py
+
+      - name: Keep Running
+        if: github.event_name == 'schedule'
+        run: |
+          git config --local user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
+          git config --local user.name "${{ github.actor }}"
+          git remote set-url origin https://${{ github.actor }}:${{ github.token }}@github.com/${{ github.repository }}
+          git pull --rebase --autostash
+          git commit --allow-empty -m "Keep Running..."
+          git push
+
+      - name: Delete old workflow run
+        uses: Mattraks/delete-workflow-runs@main
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0
+          keep_minimum_runs: 50
