添加任务检查并优化代码

--- a/.github/workflows/quark_signin.yml
+++ b/.github/workflows/quark_signin.yml
@@ -1,45 +1,107 @@
-name: Quark Sign-in
+name: Quark签到
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # 每天 UTC 时间 1:00 执行，即北京时间 9:00
-  workflow_dispatch:  # 手动触发
+    - cron: '0 1 * * *'   # 北京时间 09:00 (UTC+8 -> UTC+1)
+    - cron: '0 5 * * *'   # 北京时间 13:00 (UTC+8 -> UTC+5)
+  workflow_dispatch:      # 允许手动触发
 
 jobs:
   sign-in:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: 检出代码
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      # --- 自动任务 ---
+      - name: 随机延迟（早上）
+        if: github.event.schedule == '0 1 * * *'
+        run: |
+          delay=$((RANDOM % 1801))
+          echo "早上签到，延迟 $delay 秒后开始..."
+          sleep $delay
+
+      # --- 兜底/手动 ---
+      - name: 随机延迟（下午/手动触发）
+        if: github.event.schedule == '0 5 * * *' || github.event_name == 'workflow_dispatch'
+        run: |
+          delay=$((RANDOM % 301))
+          echo "下午兜底或手动触发，延迟 $delay 秒后开始..."
+          sleep $delay
+
+      - name: 恢复签到成功记录缓存
+        id: cache-success-restore
+        uses: actions/cache@v4
+        with:
+          path: .last_success_date
+          key: last-success-marker
+
+      # --- 判断是否今天已成功执行 ---
+      - name: 判断今天是否已签到成功
+        id: check_success_status
+        run: |
+          # 获取当前北京时间
+          current_date=$(TZ='Asia/Shanghai' date '+%Y-%m-%d')
+          echo "当前北京时间: $current_date"
+
+          if [ -f .last_success_date ]; then
+            last_date=$(cat .last_success_date)
+            echo "上次签到日期: $last_date"
+
+            if [ "$last_date" = "$current_date" ]; then
+              echo "今天已成功签到，跳过执行。"
+              exit 0
+            else
+              echo "今天尚未签到，继续执行。"
+            fi
+          else
+            echo "未找到签到记录，继续执行。"
+          fi
+
+      - name: 设置Python环境
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: 安装依赖
         run: pip install requests
 
-      - name: Run Quark Sign-in
+      - name: 执行签到脚本
         env:
           COOKIE_QUARK: ${{ secrets.COOKIE_QUARK }}
-        run: |
-          python checkIn_Quark.py
+        run: python checkIn_Quark.py
 
-      - name: Keep Running
-        if: github.event_name == 'schedule'
+      # --- 成功后记录当前日期 ---
+      - name: 标记今天签到成功
+        if: success()
+        run: |
+          date_str=$(TZ='Asia/Shanghai' date '+%Y-%m-%d')
+          echo "$date_str" > .last_success_date
+          echo "已记录成功签到日期: $date_str"
+
+      - name: 保存成功记录到缓存
+        if: success()
+        uses: actions/cache@v4
+        with:
+          path: .last_success_date
+          key: last-success-marker
+
+      # --- 自动提交保持活跃 ---
+      - name: 空提交保持活跃
+        if: success() && github.event_name == 'schedule'
         run: |
           git config --local user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
           git config --local user.name "${{ github.actor }}"
           git remote set-url origin https://${{ github.actor }}:${{ github.token }}@github.com/${{ github.repository }}
           git pull --rebase --autostash
-          git commit --allow-empty -m "Keep Running..."
+          git commit --allow-empty -m "CHORE: 保持运行(自动)"
           git push
 
-      - name: Delete old workflow run
+      - name: 清理旧的工作流记录
         uses: Mattraks/delete-workflow-runs@main
+        if: always()
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
           retain_days: 0
-          keep_minimum_runs: 50
+          keep_minimum_runs: 60
