--- a/.github/workflows/quark_signin.yml
+++ b/.github/workflows/quark_signin.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 1 * * *'   # 北京时间 09:00 (UTC+8 -> UTC+1)
     - cron: '0 5 * * *'   # 北京时间 13:00 (UTC+8 -> UTC+5)
   workflow_dispatch:      # 允许手动触发
+  push:                   # 增加 push 事件
+    branches:
+      - main             # 可以根据需要修改为其他分支
 
 jobs:
   check-if-already-signed:
